Fixed text to be readable in header

--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -37,6 +37,7 @@ header span {
     height: max-content;
     border-radius: var(--radius);
     cursor:text;
+    color: white;
 }
 
 .search input:hover {
